--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "meili"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+meilisearch-sdk = "0.17"
+futures = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1"
+actix-web = "4"
